[package]
authors = [
    "Lazaro", "Forevv"
]
name = "Manual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

features = [
    "tokio-runtime",
    "async-std-runtime",
    "sync",
    "tokio-sync",
    "aws-auth",
    "bson-uuid-0_8",
    "bson-uuid-1",
    "bson-chrono-0_4",
    "bson-serde_with",
    "zstd-compression",
    "snappy-compression",
    "zlib-compression",
    "openssl-tls",
    "tracing-unstable",
    "in-use-encryption-unstable"
]

[dependencies]
mongodb = { version = "2.3.0", features = ["tokio-sync"] }
